stexls/util/latex/grammar/out/LatexParser.py
# Generated from LatexParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LatexParser ( Parser ):

    grammarFileName = "LatexParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'{'", "'}'", 
                     "'['", "']'", "'='", "','", "<INVALID>", "<INVALID>", 
                     "'begin'", "'end'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\('", "'\\['", "'\\'", "'\\)'", "'\\]'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT", "OPEN_BRACE", "CLOSED_BRACE", 
                      "OPEN_BRACKET", "CLOSED_BRACKET", "EQUALS", "COMMA", 
                      "MATH_ENV", "TEXT", "BEGIN", "END", "INLINE_ENV_NAME", 
                      "MATH_OPEN_1", "MATH_OPEN_2", "MATH_OPEN_3", "MATH_OPEN_4", 
                      "ESCAPE", "MATH_ESCAPE_3", "MATH_ESCAPE_4" ]

    RULE_main = 0
    RULE_body = 1
    RULE_math = 2
    RULE_env = 3
    RULE_envBegin = 4
    RULE_envEnd = 5
    RULE_inlineEnv = 6
    RULE_args = 7
    RULE_text = 8
    RULE_rarg = 9
    RULE_oarg = 10
    RULE_arglist = 11
    RULE_argument = 12
    RULE_argumentName = 13
    RULE_argumentValue = 14

    ruleNames =  [ "main", "body", "math", "env", "envBegin", "envEnd", 
                   "inlineEnv", "args", "text", "rarg", "oarg", "arglist", 
                   "argument", "argumentName", "argumentValue" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    OPEN_BRACE=3
    CLOSED_BRACE=4
    OPEN_BRACKET=5
    CLOSED_BRACKET=6
    EQUALS=7
    COMMA=8
    MATH_ENV=9
    TEXT=10
    BEGIN=11
    END=12
    INLINE_ENV_NAME=13
    MATH_OPEN_1=14
    MATH_OPEN_2=15
    MATH_OPEN_3=16
    MATH_OPEN_4=17
    ESCAPE=18
    MATH_ESCAPE_3=19
    MATH_ESCAPE_4=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LatexParser.EOF, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.BodyContext)
            else:
                return self.getTypedRuleContext(LatexParser.BodyContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = LatexParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.OPEN_BRACE) | (1 << LatexParser.OPEN_BRACKET) | (1 << LatexParser.CLOSED_BRACKET) | (1 << LatexParser.EQUALS) | (1 << LatexParser.COMMA) | (1 << LatexParser.MATH_ENV) | (1 << LatexParser.TEXT) | (1 << LatexParser.BEGIN) | (1 << LatexParser.INLINE_ENV_NAME))) != 0):
                self.state = 30
                self.body()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(LatexParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def math(self):
            return self.getTypedRuleContext(LatexParser.MathContext,0)


        def env(self):
            return self.getTypedRuleContext(LatexParser.EnvContext,0)


        def inlineEnv(self):
            return self.getTypedRuleContext(LatexParser.InlineEnvContext,0)


        def text(self):
            return self.getTypedRuleContext(LatexParser.TextContext,0)


        def OPEN_BRACE(self):
            return self.getToken(LatexParser.OPEN_BRACE, 0)

        def CLOSED_BRACE(self):
            return self.getToken(LatexParser.CLOSED_BRACE, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.BodyContext)
            else:
                return self.getTypedRuleContext(LatexParser.BodyContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = LatexParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LatexParser.MATH_ENV]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.math()
                pass
            elif token in [LatexParser.BEGIN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.env()
                pass
            elif token in [LatexParser.INLINE_ENV_NAME]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.inlineEnv()
                pass
            elif token in [LatexParser.OPEN_BRACKET, LatexParser.CLOSED_BRACKET, LatexParser.EQUALS, LatexParser.COMMA, LatexParser.TEXT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.text()
                pass
            elif token in [LatexParser.OPEN_BRACE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.match(LatexParser.OPEN_BRACE)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.OPEN_BRACE) | (1 << LatexParser.OPEN_BRACKET) | (1 << LatexParser.CLOSED_BRACKET) | (1 << LatexParser.EQUALS) | (1 << LatexParser.COMMA) | (1 << LatexParser.MATH_ENV) | (1 << LatexParser.TEXT) | (1 << LatexParser.BEGIN) | (1 << LatexParser.INLINE_ENV_NAME))) != 0):
                    self.state = 43
                    self.body()
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 49
                self.match(LatexParser.CLOSED_BRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATH_ENV(self):
            return self.getToken(LatexParser.MATH_ENV, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_math

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath" ):
                listener.enterMath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath" ):
                listener.exitMath(self)




    def math(self):

        localctx = LatexParser.MathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_math)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(LatexParser.MATH_ENV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def envBegin(self):
            return self.getTypedRuleContext(LatexParser.EnvBeginContext,0)


        def envEnd(self):
            return self.getTypedRuleContext(LatexParser.EnvEndContext,0)


        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.BodyContext)
            else:
                return self.getTypedRuleContext(LatexParser.BodyContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_env

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnv" ):
                listener.enterEnv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnv" ):
                listener.exitEnv(self)




    def env(self):

        localctx = LatexParser.EnvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_env)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.envBegin()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.OPEN_BRACE) | (1 << LatexParser.OPEN_BRACKET) | (1 << LatexParser.CLOSED_BRACKET) | (1 << LatexParser.EQUALS) | (1 << LatexParser.COMMA) | (1 << LatexParser.MATH_ENV) | (1 << LatexParser.TEXT) | (1 << LatexParser.BEGIN) | (1 << LatexParser.INLINE_ENV_NAME))) != 0):
                self.state = 55
                self.body()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.envEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvBeginContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(LatexParser.BEGIN, 0)

        def args(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.ArgsContext)
            else:
                return self.getTypedRuleContext(LatexParser.ArgsContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_envBegin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvBegin" ):
                listener.enterEnvBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvBegin" ):
                listener.exitEnvBegin(self)




    def envBegin(self):

        localctx = LatexParser.EnvBeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_envBegin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(LatexParser.BEGIN)
            self.state = 65 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 64
                    self.args()

                else:
                    raise NoViableAltException(self)
                self.state = 67 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvEndContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def END(self):
            return self.getToken(LatexParser.END, 0)

        def OPEN_BRACE(self):
            return self.getToken(LatexParser.OPEN_BRACE, 0)

        def TEXT(self):
            return self.getToken(LatexParser.TEXT, 0)

        def CLOSED_BRACE(self):
            return self.getToken(LatexParser.CLOSED_BRACE, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_envEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvEnd" ):
                listener.enterEnvEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvEnd" ):
                listener.exitEnvEnd(self)




    def envEnd(self):

        localctx = LatexParser.EnvEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_envEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(LatexParser.END)
            self.state = 70
            self.match(LatexParser.OPEN_BRACE)
            self.state = 71
            self.match(LatexParser.TEXT)
            self.state = 72
            self.match(LatexParser.CLOSED_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineEnvContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INLINE_ENV_NAME(self):
            return self.getToken(LatexParser.INLINE_ENV_NAME, 0)

        def args(self):
            return self.getTypedRuleContext(LatexParser.ArgsContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_inlineEnv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineEnv" ):
                listener.enterInlineEnv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineEnv" ):
                listener.exitInlineEnv(self)




    def inlineEnv(self):

        localctx = LatexParser.InlineEnvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_inlineEnv)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(LatexParser.INLINE_ENV_NAME)
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 75
                self.args()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rarg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.RargContext)
            else:
                return self.getTypedRuleContext(LatexParser.RargContext,i)


        def oarg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.OargContext)
            else:
                return self.getTypedRuleContext(LatexParser.OargContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = LatexParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_args)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 80
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [LatexParser.OPEN_BRACE]:
                        self.state = 78
                        self.rarg()
                        pass
                    elif token in [LatexParser.OPEN_BRACKET]:
                        self.state = 79
                        self.oarg()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 82 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(LatexParser.TEXT, 0)

        def OPEN_BRACKET(self):
            return self.getToken(LatexParser.OPEN_BRACKET, 0)

        def CLOSED_BRACKET(self):
            return self.getToken(LatexParser.CLOSED_BRACKET, 0)

        def EQUALS(self):
            return self.getToken(LatexParser.EQUALS, 0)

        def COMMA(self):
            return self.getToken(LatexParser.COMMA, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterText" ):
                listener.enterText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitText" ):
                listener.exitText(self)




    def text(self):

        localctx = LatexParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.OPEN_BRACKET) | (1 << LatexParser.CLOSED_BRACKET) | (1 << LatexParser.EQUALS) | (1 << LatexParser.COMMA) | (1 << LatexParser.TEXT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RargContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACE(self):
            return self.getToken(LatexParser.OPEN_BRACE, 0)

        def CLOSED_BRACE(self):
            return self.getToken(LatexParser.CLOSED_BRACE, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.BodyContext)
            else:
                return self.getTypedRuleContext(LatexParser.BodyContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_rarg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRarg" ):
                listener.enterRarg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRarg" ):
                listener.exitRarg(self)




    def rarg(self):

        localctx = LatexParser.RargContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_rarg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(LatexParser.OPEN_BRACE)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.OPEN_BRACE) | (1 << LatexParser.OPEN_BRACKET) | (1 << LatexParser.CLOSED_BRACKET) | (1 << LatexParser.EQUALS) | (1 << LatexParser.COMMA) | (1 << LatexParser.MATH_ENV) | (1 << LatexParser.TEXT) | (1 << LatexParser.BEGIN) | (1 << LatexParser.INLINE_ENV_NAME))) != 0):
                self.state = 87
                self.body()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(LatexParser.CLOSED_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OargContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACKET(self):
            return self.getToken(LatexParser.OPEN_BRACKET, 0)

        def arglist(self):
            return self.getTypedRuleContext(LatexParser.ArglistContext,0)


        def CLOSED_BRACKET(self):
            return self.getToken(LatexParser.CLOSED_BRACKET, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_oarg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOarg" ):
                listener.enterOarg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOarg" ):
                listener.exitOarg(self)




    def oarg(self):

        localctx = LatexParser.OargContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_oarg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(LatexParser.OPEN_BRACKET)
            self.state = 96
            self.arglist()
            self.state = 97
            self.match(LatexParser.CLOSED_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArglistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(LatexParser.ArgumentContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.COMMA)
            else:
                return self.getToken(LatexParser.COMMA, i)

        def getRuleIndex(self):
            return LatexParser.RULE_arglist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArglist" ):
                listener.enterArglist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArglist" ):
                listener.exitArglist(self)




    def arglist(self):

        localctx = LatexParser.ArglistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arglist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.argument()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatexParser.COMMA:
                self.state = 100
                self.match(LatexParser.COMMA)
                self.state = 101
                self.argument()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argumentName(self):
            return self.getTypedRuleContext(LatexParser.ArgumentNameContext,0)


        def argumentValue(self):
            return self.getTypedRuleContext(LatexParser.ArgumentValueContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)




    def argument(self):

        localctx = LatexParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_argument)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.argumentName()
                self.state = 109
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 108
                    self.argumentValue()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.argumentValue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # TextContext

        def EQUALS(self):
            return self.getToken(LatexParser.EQUALS, 0)

        def text(self):
            return self.getTypedRuleContext(LatexParser.TextContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_argumentName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentName" ):
                listener.enterArgumentName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentName" ):
                listener.exitArgumentName(self)




    def argumentName(self):

        localctx = LatexParser.ArgumentNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_argumentName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            localctx.name = self.text()
            self.state = 115
            self.match(LatexParser.EQUALS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(LatexParser.BodyContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_argumentValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentValue" ):
                listener.enterArgumentValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentValue" ):
                listener.exitArgumentValue(self)




    def argumentValue(self):

        localctx = LatexParser.ArgumentValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_argumentValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





